# tri

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cli-spec.md  flake.nix  index.html  shell.nix
.github/workflows/: docs.yml  tests.yml
pres/: .~lock.2.final.odp#  0.init.odp  2.final.odp  Final presentation.odp  Intermediate Presentation.odp  init.odp
spec/: cli.md  documentation.md  meta.md
src/: cli.rs  cli_command.rs  config.rs  error.rs  hash.rs  io.rs  magick.rs  main.rs  test_utility.rs  tree.rs
tree-editor/: Cargo.toml  README.md  build.rs  flake.nix  tri  tri-config.yaml  watch-tree
tree-editor/doc/: tri.md
tree-editor/src/: cli.rs  cli_command.rs  config.rs  error.rs  hash.rs  io.rs  magick.rs  main.rs  meta.rs  tree.rs
