[package]
name = "tri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.1.2"
csv = "*"
clap = { version = "4.2.4", features = ["derive", "cargo"] }
colored = "2.0.0"
notify = "5.1.0"
serde_yaml = "0.9.21"
serde = { version = "1.0.160", features = ["derive"] }
chrono = "0.4.24"

[build-dependencies]
clap = { version = "4.2.4", features = ["derive", "cargo"] }
clap_complete = "*"
clap_mangen = "0.2.10"
